# flexlay

./: .gitignore  .pylintrc  AUTHORS  BUGS  ChangeLog  Doxyfile  GOALS  INSTALL  LICENSE  Makefile  Makefile.am  NEWS  NEWS.md  README  README.md  SConstruct  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  flake.nix  flexlay.pro  guix.scm  pylintrc  pyproject.toml  setup.cfg  setup.py  simpleed.py  supertux-editor  supertux-level  viewdocs
data/: Makefile.am  addcolor.scm  editor.scm  flexlay.xml  game.scm  gui.scm  helper.scm  mknetpanzertiles.sh  netpanzer-tileattrib.txt  netpanzer.scm  netpanzertiles.scm  netpanzertiles.xml  pingus.scm  supertux.scm  tiles.scm  tuxsprites.xml  tuxtiles.scm  tuxtiles.xml  windstille.scm  windstille.scr  windstille.xml  xml.scm
data/controller/: gamepad.scm  gamepad2.scm  keyboard.scm
data/gui/: gui.xml
data/levels/: Makefile.am  basictux.scm  bla.xml  level1.scm  level1.xml  level2.scm  level2.xml  level2_script.scm  level3.scm  level3.xml  level4.scm  level4.xml  level5.xml  level6.scm  level7.scm  level8.scm  level9.scm  level9_script.scm  netpanzer1.scm  tuxlevel-bonus5.scm  tuxlevel1.scm  tuxlevel10.scm  tuxlevel11.scm  tuxlevel12.scm  tuxlevel13.scm  tuxlevel2.scm  tuxlevel3.scm  tuxlevel3_scripts.scm  tuxlevel4.scm  tuxlevel5.scm  tuxlevel6.scm  tuxlevel7.scm  tuxlevel8.scm  tuxlevel9.scm  tuxlevel_bonus1.scm  tuxlevel_bonus2.scm  tuxlevel_bonus3.scm  tuxlevel_bonus4.scm  tuxlevel_bonus5.scm  tuxtiles7.scm
data/supertux/: objects.csv  smarttiles.csv  smarttiles_mapping.csv  tileset.strf
flexlay/: ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  SConstruct  TODO  __init__.py  __main__.py  bitmap_layer.py  blend_func.py  blitter.py  brush.py  brushmask.py  canvas.py  color.py  command.py  command_group.py  config.py  configure.ac  display.py  drawer_properties.py  editor_map.py  field.py  flexlay.py  graphic_context.py  graphic_context_state.py  gui_manager.py  input_event.py  layer.py  object_add_command.py  object_brush.py  object_delete_command.py  object_layer.py  object_move_command.py  object_transform_command.py  objmap_control_point.py  objmap_object.py  objmap_path_node.py  (+20 more)
flexlay/commands/: __init__.py  command.py  command_group.py  layer_delete_command.py  object_add_command.py  object_delete_command.py  object_move_command.py  object_transform_command.py  paint_command.py
flexlay/contrib/: clanlib_braindead_translation_fix.diff
flexlay/data/: Makefile.am  editor.scm  helper.scm  mknetpanzertiles.sh  netpanzer.scm  netpanzerbrushes.scm  pingus.scm  supertux.scm  windstille.scm
flexlay/gui/: __init__.py  button_panel.py  colorpicker.py  editor_map_component.py  editor_map_widget.py  file_dialog.py  generic_dialog.py  generic_wizard.py  icon.py  layer_selector.py  menubar.py  minimap.py  minimap_widget.py  object_selector.py  object_selector_widget.py  project_widget.py  properties_widget.py  smart_tile_selector_widget.py  statusbar.py  tile_brush_selector.py  tile_selection.py  tile_selector.py  tile_selector_widget.py
flexlay/guile/: editor.i  gui.cxx  gui.hxx  scm_functor.cxx  scm_functor.hxx  scm_helper.cxx  scm_helper.hxx  scm_obj.hxx
flexlay/lib/: SConscript  bitmap_layer.cpp  bitmap_layer.cxx  bitmap_layer.hpp  bitmap_layer.hxx  blitter.cpp  blitter.cxx  blitter.hpp  box.cpp  box.cxx  box.hpp  box.hxx  brush.cpp  brush.cxx  brush.hpp  brush.hxx  brush_impl.hpp  brush_impl.hxx  brushmask.cpp  brushmask.cxx  brushmask.hpp  colorpicker.cpp  colorpicker.cxx  colorpicker.hpp  colorpicker.hxx  command.cpp  command.cxx  command.hpp  command.hxx  command_group.cpp  command_group.cxx  command_group.hpp  command_group.hxx  command_impl.hpp  config.h  console.cpp  console.cxx  console.hpp  console.hxx  directory_view.cpp  (+251 more)
flexlay/math/: __init__.py  origin.py  point.py  rect.py  size.py
flexlay/netpanzer/: SConscript  averagecolor.cpp  gui.rb  level.rb  netpanzer-editor  netpanzer.cpp  netpanzer.cxx  netpanzer.hpp  netpanzer.hxx  netpanzer.rb  netpanzerbrushes.rb
flexlay/paint/: animation.rb  example15.scm.bz2  example32.scm.bz2  example4.scm.bz2  gui.rb  paint  paint.rb
flexlay/pingus/: gui.rb  pingus-editor-gdb  pingus.rb  worldmap.rb  worldobjs.rb
flexlay/python/: editor.cxx  editor.hxx  flexlay.py  hellopy.cxx  python_functor.cxx  python_functor.hxx  python_meta_data.cxx  python_meta_data.hxx  python_object.cxx  python_object.hxx  sexpr_parser.cxx  sexpr_parser.hxx
flexlay/ruby/: SConscript  basic.rb  basic_gui.rb  basic_level.rb  flexlay_wrap.hpp  flexlay_wrap.hxx  layout_component.rb  ruby_converter.cpp  ruby_converter.cxx  ruby_functor.cpp  ruby_functor.cxx  ruby_functor.hpp  ruby_functor.hxx  ruby_meta_data.cpp  ruby_meta_data.cxx  ruby_meta_data.hxx  ruby_object.cpp  ruby_object.cxx  ruby_object.hxx  ruby_sexpr_parser.cxx  ruby_sexpr_parser.hpp  sexpr_config_file.rb  swigrun.i
flexlay/src/: Makefile.am  command_group.cxx  editor.cxx  editor.hxx  editor_grid_layer.hxx  editor_main.cxx  editor_main.hxx  editor_map.cxx  editor_map.hxx  editor_map_component.cxx  editor_map_component.hxx  editor_map_layer.hxx  editor_mapsize_layer.cxx  editor_mapsize_layer.hxx  editor_names.hxx  editor_objmap.cxx  editor_objmap.hxx  editor_tilemap.cxx  editor_tilemap.hxx  field.hxx  globals.hxx  graphic_context_state.cxx  graphic_context_state.hxx  gui_manager.cxx  math.hxx  minimap.cxx  netpanzer-editor  (+42 more)
src/: AnimationObj.cxx  AnimationObj.hxx  Background.cxx  BonusFlyer.cxx  BonusFlyer.hxx  Controller.hxx  DefaultShoot.cxx  DefaultShoot.hxx  DeltaManager.hxx  Dog.cxx  Dog.hxx  Field.hxx  GameObj.cxx  GameObj.hxx  GameObjSmob.cxx  GameObjSmob.hxx  GameWorld.cxx  GameWorld.hxx  GameWorldSmob.cxx  GameWorldSmob.hxx  GamepadController.cxx  GamepadController.hxx  GuileGameObj.cxx  GuileGameObj.hxx  GuileGameObjFactory.cxx  GuileGameObjFactory.hxx  KeyboardController.cxx  KeyboardController.hxx  LaserShoot.cxx  LaserShoot.hxx  Makefile.am  Player.cxx  Player.hxx  PlayerView.cxx  PlayerView.hxx  PowerUp.cxx  PowerUp.hxx  SCMConverter.hxx  SConstruct  Sprite.hxx  (+299 more)
(+1209 files in other folders)
