AC_INIT( src/WindstilleMain.cxx )
AM_CONFIG_HEADER( config.h )

PACKAGE=windstille

MAJOR_VERSION=0
MINOR_VERSION=0
PATCH_VERSION=0

VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}

AC_DEFINE_UNQUOTED(MAJOR_VERSION, $MAJOR_VERSION)
AC_DEFINE_UNQUOTED(MINOR_VERSION, $MINOR_VERSION)
AC_DEFINE_UNQUOTED(PATCH_VERSION, $PATCH_VERSION)
AC_DEFINE_UNQUOTED(VERSION_STRING, "${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION}")

AM_INIT_AUTOMAKE( $PACKAGE, $VERSION )

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checking for libraries


dnl ---------------------------------------------------
dnl Check the location of the XML library and -headers.
AC_ARG_WITH(libxml,[  --with-libxml=PREFIX    set the path to your libxml installation])

dnl first check for xml2-config, then xml-config
if test "x$with_libxml" != "x"
then
        AC_MSG_CHECKING([for xml(2)-config])
        XML_CONFIG="$with_libxml/bin/xml2-config"
        if test -x "$XML_CONFIG"
        then
                AC_MSG_RESULT([$XML_CONFIG])
        else
		XML_CONFIG="$with_libxml/bin/xml-config"
		if test -x "$XML_CONFIG"
	        then
			AC_MSG_RESULT([$XML_CONFIG])
		else
                AC_MSG_ERROR([
*** I was not able to find the script \"xml(2)-config\".
*** Did you specify the correct prefix for --with-libxml ?])
		fi
	fi
else
	dnl try xml2-config, then xml-config
	AC_CHECK_PROGS(XML_CONFIG,xml2-config xml-config,no)
        if test "x$XML_CONFIG" = "xno"
        then
		AC_MSG_ERROR([
*** I was not able to find the script \"xml(2)-config\".
*** Please check your installation of libxml.])
	fi
fi

dnl Check the version of libxml.
ac_xml_version=`$XML_CONFIG --version`
case "$ac_xml_version" in
        2.*)
 	AC_DEFINE_UNQUOTED(LIBXML_2)
        ;;
        *)
        AC_CHECK_LIB(xml, xmlIsBlankNode,, [AC_DEFINE_UNQUOTED(NO_XMLISBLANKNODE)])
 	;;
esac

dnl Add the apropriate xml-flags to CPPFLAGS and LIBS.
CPPFLAGS="$CPPFLAGS `$XML_CONFIG --cflags`"
LIBS="$LIBS `$XML_CONFIG --libs`"
dnl ---------------------------------------------------


AC_CHECK_HEADERS(sstream)
dnl => HAVE_SSTREAM
if test "$ac_cv_header_sstream" = "no"; 
then
	AC_CHECK_HEADER(strstream)
	if test "$ac_cv_header_strstream" = "no" -a "$ac_cv_header_strstream_h" = "no";
	then
		AC_MSG_ERROR(could not find either <sstream> or <strstream>.)
	fi
fi

dnl Checking for libraries
AC_CHECK_LIB(qthreads, main)
AC_CHECK_LIB(guile, scm_boot_guile)
AC_CHECK_HEADER(guile/gh.h)

AC_CHECK_LIB( clanCore,   main,, [
	echo "ClanLib installed, but -lclanCore not found, run 'ldconfig' and try again,"
	echo "if that doesn't help have a look at the file config.log and look into"
	echo "the FAQ."
	exit
	])

AC_CHECK_LIB( clanApp,   main,, [
	echo "ClanLib installed, but -lclanCore not found, run 'ldconfig' and try again,"
	echo "if that doesn't help have a look at the file config.log and look into"
	echo "the FAQ."
	exit
	])

AC_CHECK_LIB( clanDisplay,   main,, [
	echo "ClanLib installed, but -lclanCore not found, run 'ldconfig' and try again,"
	echo "if that doesn't help have a look at the file config.log and look into"
	echo "the FAQ."
	exit
	])

AC_CHECK_LIB( clanGL,   main,, [
	echo "ClanLib installed, but -lclanGL not found, run 'ldconfig' and try again,"
	echo "if that doesn't help have a look at the file config.log and look into"
	echo "the FAQ."
	exit
	])


AC_CHECK_LIB( clanJPEG,   main,, [
	echo "ClanLib is installed, but clanJPEG was not found. You probably"
	echo "forgot to compile clanJPEG, which is part of the ClanLib package"
	echo "or you need to run 'ldconfig'."
	echo "If you think you have everything correctly installed have a look at"
	echo "the file 'config.log' to see what went wrong"
	exit
	])

AC_CHECK_LIB( clanPNG,   main,, [
	echo "ClanLib is installed, but clanPNG was not found. You probably"
	echo "forgot to compile clanPNG, which is part of the ClanLib package"
	echo "or you need to run 'ldconfig'."
	echo "If you think you have everything correctly installed have a look at"
	echo "the file 'config.log' to see what went wrong"
	exit
	])

AC_CHECK_LIB( SphriteLibGL,   main,, [
	echo "SphriteLibGL is not installed. You can get it from:"
	echo
	echo "  http://dark.x.dtu.dk/~sphair/SphriteLib/"
	echo 
	exit
	])


AC_OUTPUT( Makefile
           data/Makefile
           data/levels/Makefile
           src/Makefile
           src/guile/Makefile
           src/editor/Makefile )

dnl EOF dnl
