##  $Id: Makefile.am,v 1.6 2003/12/02 16:50:41 grumbel Exp $
## 
##  Windstille - A free Lemmings clone
##  Copyright (C) 2002 Ingo Ruhnke <grumbel@gmx.de>
##
##  This program is free software; you can redistribute it and/or
##  modify it under the terms of the GNU General Public License
##  as published by the Free Software Foundation; either version 2
##  of the License, or (at your option) any later version.
##
##  This program is distributed in the hope that it will be useful,
##  but WITHOUT ANY WARRANTY; without even the implied warranty of
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##  GNU General Public License for more details.
## 
##  You should have received a copy of the GNU General Public License
##  along with this program; if not, write to the Free Software
##  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.

#gui/ images/

EXTRA_DIST = \
  editor.scm \
  gui.scm \
  helper.scm \
  mknetpanzertiles.sh \
  netp.act \
  netpanzer.scm \
  netpanzerbrushes.scm \
  netpanzersprites.xml \
  pingus.scm \
  supertux.scm \
  tuxsprites.xml \
  tuxtiles.scm \
  tuxtiles.xml \
  windstille.scm \
  xml.scm \
  \
  images/netpanzersprites/outpost.png \
  images/netpanzersprites/spawnpoint.png \
  \
  gui/checkbox/checked.tga \
  gui/checkbox/checked_disabled.tga \
  gui/checkbox/unchecked.tga \
  gui/checkbox/unchecked_disabled.tga \
  gui/fonts/font_black.tga \
  gui/fonts/font_gray.tga \
  gui/gui.xml \
  gui/menu/arrow.png \
  gui/menu/checked.png \
  gui/menu/unchecked.png \
  gui/radiobutton/checked.tga \
  gui/radiobutton/checked_disabled.tga \
  gui/radiobutton/unchecked.tga \
  gui/radiobutton/unchecked_disabled.tga

# EOF #
